@@ -4,6 +4,7 @@ v2.6.4.1 - Made autofit work in EDL timeline when switching images.
 	 - Fixed BG image and wipe mode in network connections.
 	 - Bug fixed color area window selection in stereo and added a square
 	   displaying the mean color in the color info window.
+	 - Updated to OpenEXR 2.2 on Linux.  Windows is stuck with 2.1.
 v2.6.4.0 - Added a starting audio volume preference to the default 
 	   audio preferences.
 	 - Made preferences run when the user hits ok.  Previously ok did
